--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,7 +5,19 @@
 }
 
 .footer{
-    background-color: #34495E;
-    width: 100%;
-    height: 10vh;
+    position:fixed;
+   left:0px;
+   bottom:0px;
+   height:50px;
+   width:100%;
+    background-color: #2c3e50;
+    
+}
+
+.titleFooter{
+    display: flex;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
