--- a/src/css/clock.css
+++ b/src/css/clock.css
@@ -1,17 +1,28 @@
 .clock-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid #333;
-    border-radius: 8px;
-    padding: 20px;
-    background-color: #f5f5f5;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-.clock-text {
-    font-size: 24px;
-    font-weight: bold;
+  width: 200px;
+  height: 200px;
+  border: 5px solid #333;
+  border-radius: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
 }
-  
+
+.clock-hand {
+  width: 3px;
+  height: 70px;
+  background-color: #333;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: 50% 100%;
+  transform: translate(-50%, -100%); /* Añadimos una traslación para centrar la aguja en el reloj */
+  animation: rotateHand 60s linear infinite;
+}
+
+.clock-container:hover {
+  transform: rotate(10deg);
+}
