--- a/src/css/loginform.css
+++ b/src/css/loginform.css
@@ -7,10 +7,28 @@
 }
 
 .form{
-    margin: 20px;
+    margin: 10%;
     width: 40%;
-    height: 50vh;
-    background-color: blueviolet;
+    align-content: center;
+    align-items: center;
+    background-color: white;
     border-radius: 10px;
-    border: 1px solid black;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
+    display: flex;
+    flex-direction: column;
+    height: 0%;
+    justify-content: center;
+    margin-bottom: 20px;
+    overflow: hidden;
+    height: 30vh;
+}
+
+.form:hover{
+    cursor: pointer;
+  transform: translateY(-10px) scale(1.03) ;
+  transition: transform 200ms ease;
+}
+
+.error{
+    color: red;
 }
