--- a/src/css/loginform.css
+++ b/src/css/loginform.css
@@ -20,7 +20,7 @@
     justify-content: center;
     margin-bottom: 20px;
     overflow: hidden;
-    height: 30vh;
+    height: 45vh;
 }
 
 .form:hover{
@@ -32,3 +32,38 @@
 .error{
     color: red;
 }
+
+.btn {
+    color: #fff !important;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 0.5em 1.2em;
+    background: #318aac;
+    border: 2px solid;
+    border-color: #318aac;
+    position: relative;
+  }
+  .btn:before {
+    content:"";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    transition: all 1s ease;
+  }
+  .btn:hover:before {
+    width: 100%;
+  }
+
+  .title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 450%;
+  }
+
+  input{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
