--- a/src/css/clock.css
+++ b/src/css/clock.css
@@ -9,6 +9,7 @@
   align-items: center;
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
+  margin-left: 43%;
 }
 
 .clock-hand {
@@ -16,6 +17,8 @@
   height: 70px;
   background-color: #333;
   position: absolute;
+  display: flex;
+  flex-direction: column;
   top: 50%;
   left: 50%;
   transform-origin: 50% 100%;
