--- a/src/css/loginform.css
+++ b/src/css/loginform.css
@@ -67,11 +67,11 @@
 
   .img-fixed-size {
     width: 100%;
-    height: 100px; /* Ajusta la altura deseada */
+    height: 100px; 
     object-fit: cover;
   }
 
-/* Estilos para los campos de entrada (inputs) */
+
 input {
   padding: 8px;
   border: 1px solid #ccc;
@@ -79,13 +79,13 @@ input {
   margin-bottom: 10px;
 }
 
-/* Resaltar el borde en azul al hacer clic */
+
 input:focus {
   border-color: #007bff;
   outline: none;
 }
 
-/* Estilos para los mensajes de error */
+
 .error {
   color: red;
   font-size: 12px;
