--- a/src/css/confeti.css
+++ b/src/css/confeti.css
@@ -1,4 +1,3 @@
-/* Estilos para el botón de confeti */
 .confetti-container {
     display: flex;
     justify-content: center;
@@ -14,5 +13,20 @@
     font-size: 16px;
     cursor: pointer;
     margin: 5px;
+    position: relative;
+  }
+
+  .confetti-button:before {
+    content:"";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    transition: all 1s ease;
+  }
+  .confetti-button:hover:before {
+  width: 100%;
   }
   
