--- a/src/css/das.css
+++ b/src/css/das.css
@@ -49,3 +49,20 @@
   width: 100%;
   }
 
+  .das-title-animated {
+    font-family: Franklin Gothic Medium,Arial Narrow,Arial,sans-serif;
+    font-size: 100px;
+    color: transparent;
+    background-image: url(https://media.giphy.com/media/CoBpcNr7nfBmOKJeac/giphy.gif);
+    background-position: center;
+    -webkit-background-clip: text;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .img-size {
+    width: 100%;
+    height: 100px; /* Ajusta la altura deseada */
+    object-fit: cover;
+  }
