--- a/src/css/cardimage.css
+++ b/src/css/cardimage.css
@@ -10,14 +10,15 @@
   width: 200px;
   height: 200px;
 }
-.card:hover{
+
+.card:hover {
   cursor: pointer;
-  transform: translateY(-10px) scale(1.03) ;
+  transform: translateY(-10px) scale(1.03);
   transition: transform 200ms ease;
 }
 
 .img-fixed-size {
   width: 100%;
-  height: 200px; /* Ajusta la altura deseada */
+  height: 200px;
   object-fit: cover;
 }
